@@ -1,5 +1,16 @@
 2010-03-12  Miguel de Dios <miguel.dedios@artica.es>
 
+	* include/functions_html.php: in the function "print_select" and
+	"print_select_sql" added new parameter $disable for to disable select.  
+
+	* include/js/integria_incident_search.js: changed source code for extract
+	the id_user from select instead to old hidden input. 
+
+	* operation/incidents/incident_detail.php: added new select field "Creator"
+	it is enabled when admin logged.
+
+2010-03-12  Miguel de Dios <miguel.dedios@artica.es>
+
 	* include/js/integria_incident_search.js: disabled the button when it's
 	in ajax message.
 	
